--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -82,6 +82,9 @@
     "Back" : {
       "comment" : "The button text for the navigation back button"
     },
+    "Be careful about what nodes you delete, if the node has children those will be deleted too. There is no way to restore a node." : {
+      "comment" : "Alert explanation of node deletion"
+    },
     "By default the cue voice and the speaking voice will be played out of the same audio device. If you would like them to be sent to different audio devices you can enable audio splitting and send each voice to either the left our right audio channel. You then have to use an audio splitter cable to direct that out." : {
       "comment" : "A description of why audio splitting exists"
     },
@@ -131,7 +134,10 @@
       "comment" : "This label prefixes the current word in the scrollable area. Make sure to leave the colon and space"
     },
     "Delete" : {
-      "comment" : "Button label to confirm deletion"
+      "comment" : "Button label to confirm deletion\nButton text for deleting a node"
+    },
+    "Delete Node" : {
+      "comment" : "Alert title for deleting node"
     },
     "Delete Switch" : {
       "comment" : "Title for alert about deleting a switch"
