--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -91,6 +91,12 @@
     "Be careful about what nodes you delete, if the node has children those will be deleted too. There is no way to restore a node." : {
       "comment" : "Alert explanation of node deletion"
     },
+    "Bold Highlight Text" : {
+
+    },
+    "Bold Message Bar Text" : {
+
+    },
     "By default the cue voice and the speaking voice will be played out of the same audio device. If you would like them to be sent to different audio devices you can enable audio splitting and send each voice to either the left our right audio channel. You then have to use an audio splitter cable to direct that out." : {
       "comment" : "A description of why audio splitting exists"
     },
@@ -174,9 +180,6 @@
     },
     "Dismiss" : {
       "comment" : "Message on dismiss button for errors"
-    },
-    "Display" : {
-      "comment" : "Label for display header in settings"
     },
     "Display control commands" : {
       "comment" : "Picker label for control commands"
