additon of cancelScan - similar to back but goes to index 0 of current branch #49
Think it should also stop. Note its doing something odd on the parent node. Its selecting the current hovered item then goes to 0 if parent.

--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -124,6 +124,9 @@
     "Cancel" : {
       "comment" : "Cancel button label\nLabel for closing an alert"
     },
+    "Cancel scanning from the current item and restarts to the top of the tree, scanning must be enabled" : {
+      "comment" : "Label for action that happens on a keypress"
+    },
     "Clear all the inputted text" : {
       "comment" : "Label for action that happens on a keypress"
     },
